# FirstAIFrameWork

./: CMakeLists.txt  README.md  main.cpp
layer/: LayerBlob.cpp  LayerBlob.h  MyLayer.cpp  MyLayer.h  main.cpp  readData.cpp  readData.h
networkDefine/: layerDefine.json  layerParamDefine.h  netParamDefine.h
src/: JsonReaderFile.cpp  JsonReaderFile.h  TestHello.cpp  TestHello.h
